Updated to the latest Hotmoka